--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Fredoka', sans-serif, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace
 }
 
 body {
@@ -11,9 +15,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
